Prevent overlap of sorting indicators with column name #105

--- a/website/static/sass/network.sass
+++ b/website/static/sass/network.sass
@@ -214,7 +214,7 @@ $sqrt_2: 1.41421356237
     float: left
 
 .site-muts
-  width: 400px
+  width: 430px
 
   @import "sites_mutations_table"
 
