--- a/website/static/sass/sites_mutations_table.sass
+++ b/website/static/sass/sites_mutations_table.sass
@@ -18,4 +18,5 @@
     th
       .th-inner
         padding: 4px
+        padding-right: 17px
         line-height: 14px
